--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,56 @@
-#container {
-  text-align: center;
+section{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  .card-item{
+    width: 9.3rem;
+    height: 11rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background-color: var(--ion-color-dark);
+    box-shadow: none;
+    color: var(--ion-color-light);
+    img{
+      max-width: 4rem;
+      margin: auto 8%;
+    }
+    
+    span:nth-child(2){
+      font-weight: 500;
+    }
+
+    span:nth-child(3){
+      font-weight: bold;
+      margin: auto 1rem;
+      font-size: 1.1rem;
+    }
+    
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+nav{
+  display: flex;
+  justify-content: flex-end;
+  margin: 1rem 2rem;
+  ::ng-deep ion-badge {
+    position: absolute;
+    z-index: 1;
+    font-size: 10px;
+    right: 6%;
+    top: 1.3%;
+  }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+#first-header{
+  background-image: url('../../assets/img/wallpaper-store.jpg');
+  background-size: cover;
+  height: 8rem;
 }
 
-#container a {
-  text-decoration: none;
+#section-title{
+  margin: 0.1rem !important;
 }
