--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -54,3 +54,11 @@ nav{
 #section-title{
   margin: 0.1rem !important;
 }
+
+#address-title{
+  text-align: end;
+  text-transform: uppercase;
+  font-size: smaller;
+  opacity: 0.5;
+  margin: 0.3rem 2rem !important;
+}
