--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -3,29 +3,31 @@
 </nav>
 <header>
   <h1>Cart</h1>
-  <h2>R$ {{cartService.totalValue}}</h2>
+  <h2>R$ {{this.formGroup.get('valueCart').value ?? '0,00'}}</h2>
 </header>
-<section id="cart-list" *ngIf="itemsCart.length > 0">
-  <div class="card-item" *ngFor="let item of itemsCart">
-    <img src="{{ item.img }}"/>
-    <div id="infos">
-      <span id="title">{{item.title}}</span>
-      <div id="money-info">
-        <span id="quantity">Total: <span id="value">R$ {{item.value}}</span></span>
-        <span id="quantity">Quantity: <span id="value">{{item.quantity}}</span></span>
+<main>
+  <section id="cart-list">
+    <div class="card-item" *ngFor="let item of itemsCart">
+      <img src="{{ item.img }}"/>
+      <div id="infos">
+        <span id="title">{{item.title}}</span>
+        <div id="money-info">
+          <span id="quantity">Total: <span id="value">R$ {{item.value}}</span></span>
+          <span id="quantity">Quantity: <span id="value">{{item.quantity}}</span></span>
+        </div>
+      </div>
+      <div class="nav">
+        <button (click)="removeProduct(item.id)">X</button>
       </div>
     </div>
-    <div class="nav">
-      <button (click)="removeProduct(item.id)">X</button>
-    </div>
-  </div>
-</section>
-<section *ngIf="itemsCart.length <= 0">
+  </section>
+  <nav *ngIf="itemsCart.length > 0; else empty">
+    <button (click)="finishBuy()">Finish purchase</button>
+    <button (click)="clearCart()">Clear cart</button>
+  </nav>
+</main>
+<ng-template #empty>
   <div id="no-cart">
       <span id="no-cart-message">{{ 'The cart is empty' | uppercase }}</span>
   </div>
-</section>
-<nav *ngIf="itemsCart.length > 0">
-  <button (click)="finishBuy()">Finish purchase</button>
-  <button (click)="clearCart()">Clear cart</button>
-</nav>
+</ng-template>
